src/scss/partials/_chatPinned.scss
/* ... */
.pinned-message, 
.reply {
  cursor: pointer;
  display: flex;
  align-items: center;
  overflow: hidden;
  position: relative;
  user-select: none;

  /* &.is-media {
    .emoji:first-child {
      margin: 0 .25rem 0 0;
    }
  } */
  
  &-content {
    flex-grow: 1;
    flex-shrink: 1;
    overflow: hidden;
    pointer-events: none;
    position: relative;
    margin-left: .5rem;
  }

  &-title {
    color: var(--primary-color);
  }
  
  &-title, 
  &-subtitle {
    font-size: 14px;
    line-height: var(--line-height);

    @include text-overflow();
  }

  &-media {
    height: 2rem !important;
    width: 2rem !important;
    overflow: hidden;
    position: absolute;
    left: 0;
    top: .125rem;

    &.is-round {
      border-radius: 50%;
    }

    // sticker
    /* > img {
      object-fit: contain !important;
      max-width: 100%;
      max-height: 100%;
    } */
    > img {
      object-fit: cover;
      width: 100%;
      height: 100%;
    }
  }

  i {
    font-style: normal;
    //color: var(--primary-color);
    color: var(--secondary-text-color);
  }

  img.emoji {
    height: 1rem;
    width: 1rem;
    vertical-align: top;
  }

  /* span.emoji {
    font-size: 1rem;
    vertical-align: unset;
  } */
}

.reply {
  &.is-media {
    .reply-content {
      padding-left: 2.5rem;
    }
  }

  /* html.no-touch &:hover {
    background-color: var(--light-secondary-text-color);
  } */

  &-border {
    height: 2rem;
    border-radius: 1px;
    min-width: 2px;
    background: var(--primary-color);
  }

  /* &-content {
    height: 2rem;
  } */

  &-content {
    margin-left: .625rem;
  }

  &-media {
    border-radius: .25rem;
  }

  &-cancel {
    margin-bottom: 0 !important;
  }

  &-title {
    margin: -1px 0 1px;
  }

  .peer-title {
    font-weight: 500;
  }
}

.pinned-container {
  --container-height: 3.25rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex: 0 0 auto;
  overflow: visible;
  cursor: pointer;

  &.is-floating {
    position: absolute !important;
    top: var(--topbar-height);
    right: 0;
    left: 0;
    margin: 0;
    width: auto;
    height: var(--container-height);
    max-height: var(--container-height);
    background-color: var(--surface-color) !important;
    // box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, .15);
    // box-shadow: 0px 2px 3px 0px rgb(0 0 0 / 10%);

    .pinned-container-wrapper {
      order: 0;
      padding: 0 1rem;
      height: 100%;
      border-radius: 0;
      z-index: 0;
      max-width: 100%;

      @include respond-to(handhelds) {
        padding: 0 .5rem;
      }

      /* &-utils {
        position: relative;
        z-index: 0;
      } */
    }

    .pinned-container-content {
      margin-right: .5rem;
    }

    /* &:before {
      content: " ";
      height: 1px;
      background-color: var(--border-color);
      top: 0;
      right: 0;
      left: 0;
      position: absolute;
    } */

    &:before {
      content: " ";
      border-top: 1px solid var(--border-color);
      border-bottom: 1px solid var(--border-color);
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
    }

    // &:before {
    //   width: 100%;
    //   content: " ";
    //   height: 52px;
    //   left: 0;
    //   top: 0;
    //   position: absolute;
    //   /* box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .15); */
    //   box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, .15);
    // }
  }

  &-content {
    flex: 1 1 auto;
    overflow: hidden;
    position: relative;
    pointer-events: none;
  }

  .btn-icon {
    font-size: 1.5rem;
    display: flex;
    justify-content: center;
    // z-index: 1;
    flex: 0 0 auto;
  }

  &-wrapper {
    display: flex;
    flex: 1 1 auto;
    overflow: hidden;
    align-items: center;
    padding: .25rem;
    border-radius: .25rem;
    order: 1;

    &-utils {
      flex: 0 0 auto;
      display: flex;
      align-items: center;
      position: relative;
    }

    /* html.no-touch &:hover {
      background-color: var(--light-secondary-text-color);
    } */
  }
}
/* ... */

